--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -33,7 +33,10 @@
     align-items: center;
     justify-content: center;
 }
-
+#skill>h1{
+    margin-top: 150px; 
+    margin-bottom: 50px;
+}
 .skillslist{
     height: 100%;
     width: 50%;
@@ -61,4 +64,62 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(51, 51, 171);
+}
+
+/*-----------------------Media Query---------------------------*/
+/*------------------Media Query -----------------*/
+
+
+@media only screen and (max-width:600px){
+    /*Navigation Bar*/
+.header{
+    width: auto;
+}
+/*About Me*/
+ .row{
+    display: flex;
+    flex-direction: column;
+ }
+ img{
+   width: auto;
+ }
+ #aboutme{
+    width: auto;
+    align-items: center;
+    font-size: 17.5px;
+}
+ /*Skills*/
+ #skill{
+    width: auto;
+    height: 360px;
+    align-items: center;
+ }
+ #skill>h1{
+    margin-top: 50px;
+    margin-bottom: 35px;
+ }
+ .skillslist{
+    width: auto;
+    height: 300px;
+}
+/*Contact*/
+ #contact{
+    margin-top: 10px;
+    height: 170px;
+    width: auto;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+ }
+
+
+ .copyrightstext{
+    height: 17  0px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(51, 51, 171);
+}
+
 }
